--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,15 @@
   font-family: "Press Start 2P", sans-serif;
 }
 
+body {
+  background-color: var(--main-white);
+}
+
 :root {
   --red: #ee1515;
   --black: #000;
   --dark-gray: #222224;
+  --gray: #777777;
   --light-gray: #b0b0b0;
   --main-white: #f0f0f0;
   --white: #fff;
