Checkout Page, Cart Products Component and Summary created and styled

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@ body {
 
 :root {
   --red: #ee1515;
-  --black: #000;
-  --dark-gray: #222224;
+  --black: #262628;
+  --dark-gray: #3a3a3d;
   --gray: #777777;
   --light-gray: #b0b0b0;
   --main-white: #f0f0f0;
